# VI-SLAM

./: .gitignore  .gitmodules  CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  MultiMatrix.npz  README.md  build.sh  echo_imu  echo_imu.cpp  echo_imu_server.py  euroc-dataset-maker.py  f_dataset-MH01_monoi.txt  kf_dataset-MH01_monoi.txt  load.ipynb  load.py
Examples/Monocular-Inertial/: live.yaml  mono_inertial_euroc  mono_inertial_euroc.cc  mono_inertial_live  mono_inertial_live.cc
MH_01_easy/mav0/: body.yaml
MH_01_easy/mav0/cam0/: data.csv  sensor.yaml  times.txt
MH_01_easy/mav0/imu0/: data.csv  sensor.yaml
evaluation/: associate.py  evaluate_ate_scale.py
src/: System.cc
